# mixed-engine

./: CMakeLists.txt
assets/scenes/: Scene1.xml  Scene2.xml  Scene3.xml
cmake/: Shaders.cmake
src/: Actor.cpp  Actor.h  BufferHandle.h  Camera.cpp  Camera.h  CameraPosition.h  Collider.h  Component.h  Debug.cpp  Debug.h  GlobalLight.h  Object.cpp  Object.h  ObjectComponent.cpp  ObjectComponent.h  SceneManager.cpp  SceneManager.h  TextureHandle.h  Trackball.cpp  Trackball.h  TransformComponent.cpp  TransformComponent.h  UniformTransformations.h  Utilities.cpp  Utilities.h  Vertex.h  main.cpp  precomp.cpp  precomp.h  stb_image.cpp
src/Components/: Actor.cpp  Actor.h  TransformComponent.cpp  TransformComponent.h
src/components/: Actor.cpp  Actor.h  ObjectComponent.cpp  ObjectComponent.h  TransformComponent.cpp  TransformComponent.h
src/render/: Renderer.h  Scene.cpp  Scene.h  VulkanRenderer.cpp  VulkanRenderer.h
src/shaders/: basic.frag  basic.vert  bloom.frag  brightness.frag  chromab.frag  colorReduction.frag  common.glsl  crt.frag  dream.frag  glitch.frag  grayscale.frag  nopost.frag  pixelation.frag  post.vert  retro.frag  scanlines.frag  skybox.frag  skybox.vert  vignette.frag
src/window/: Timer.cpp  Timer.h  Window.cpp  Window.h
temp/: Actor.cpp  Actor.h
